force-app/main/default/objects/refedge__Microsite__c/refedge__Microsite__c.object-meta.xml
<CustomObject>
    <description>Content Sharing (Bound 4)</description>
    <label>Microsite</label>
    <nameField>
        <label>Microsite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Microsites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>