force-app/main/default/objects/refedge__Microsite__c/fields/refedge__Header_Copy_Alignment__c.field-meta.xml
<CustomField>
    <fullName>refedge__Header_Copy_Alignment__c</fullName>
    <label>Header Copy Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>