force-app/main/default/objects/refedge__Microsite__c/fields/refedge__Share_Link_Copy__c.field-meta.xml
<CustomField>
    <fullName>refedge__Share_Link_Copy__c</fullName>
    <defaultValue>&quot;Share&quot;</defaultValue>
    <label>Share Link Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>