force-app/main/default/objects/refedge__Microsite__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__Language__c</columns>
    <columns>refedge__Available_for_Use__c</columns>
    <columns>refedge__Rate_Link_Copy__c</columns>
    <columns>refedge__Share_Link_Copy__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>